--- a/index.html
+++ b/index.html
@@ -137,8 +137,11 @@ nav button.active {
     <select id="filterStatus">
       <option value="">全部狀態</option>
       <option>全新未拆吊牌</option>
-      <option>拆包裝有吊牌</option>
+      <option>無包裝有吊牌</option>
+      <option>無包裝無吊牌</option>
       <option>景品</option>
+      <option>有污損、髒污</option>
+      <option>其他狀態（私訊了解）</option>
     </select>
     <button onclick="applyFilter()">搜尋</button>
   </div>
