--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ nav button.active{font-weight:bold;text-decoration:underline}
   <button id="tabAdd" onclick="switchPage('add')">上架商品</button>
 </nav>
 
-<!-- 商品列表 -->
 <div id="pageList" class="page active">
   <div class="filter-bar">
     <input id="searchName" placeholder="搜尋商品名稱">
@@ -49,12 +48,10 @@ nav button.active{font-weight:bold;text-decoration:underline}
     </select>
     <button onclick="applyFilter()">搜尋</button>
   </div>
-
   <div class="grid" id="items"></div>
   <div class="pagination" id="pagination"></div>
 </div>
 
-<!-- 上架商品 -->
 <div id="pageAdd" class="page">
   <div class="form-box">
     <h3>上架商品</h3>
@@ -62,7 +59,6 @@ nav button.active{font-weight:bold;text-decoration:underline}
     <input id="name" placeholder="商品名稱">
     <input id="price" type="number" min="1" placeholder="價格">
 
-    <!-- 物品狀態 -->
     <select id="status">
       <option value="">請選擇物品狀態</option>
       <option>全新未拆吊牌</option>
@@ -76,9 +72,7 @@ nav button.active{font-weight:bold;text-decoration:underline}
     <input id="contact" placeholder="聯繫方式">
 
     <input id="photo" type="file" accept="image/*" multiple>
-    <small>最多 3 張，每張 ≤ 700KB</small>
 
-    <!-- 交易地點 -->
     <select id="place">
       <option>國壽仁愛大樓</option>
       <option>國壽信義安和大樓</option>
@@ -124,9 +118,9 @@ db.collection("items").orderBy("createdAt","desc").onSnapshot(s=>{
 });
 
 function applyFilter(){
-  const n=searchName.value.toLowerCase();
-  const s=searchSeller.value.toLowerCase();
-  const st=filterStatus.value;
+  const n=document.getElementById("searchName").value.toLowerCase();
+  const s=document.getElementById("searchSeller").value.toLowerCase();
+  const st=document.getElementById("filterStatus").value;
   filteredItems=allItems.filter(i=>
     i.name.toLowerCase().includes(n)&&
     i.seller.toLowerCase().includes(s)&&
@@ -136,34 +130,46 @@ function applyFilter(){
 }
 
 function renderPage(p){
-  items.innerHTML="";
+  const box=document.getElementById("items");
+  const pag=document.getElementById("pagination");
+  box.innerHTML="";
   filteredItems.slice((p-1)*ITEMS_PER_PAGE,p*ITEMS_PER_PAGE).forEach(i=>{
-    items.innerHTML+=`
+    box.innerHTML+=`
     <div class="card">
       <img src="${i.img[0]}" onclick="openImg('${i.img[0]}')">
       <p><b>商品名稱：</b>${i.name}</p>
       <p><b>價格：</b>$${i.price}</p>
-      <p><b>物品狀態：</b>${i.status}</p>
+      <p><b>狀態：</b>${i.status}</p>
       <p><b>賣家：</b>${i.seller}</p>
       <p><b>聯繫方式：</b>${i.contact}</p>
-      <p><b>交易地點：</b>${i.place}</p>
+      <p><b>地點：</b>${i.place}</p>
       ${(isAdmin||i.ownerId===myOwnerId)?`<button onclick="removeItem('${i.id}')">下架</button>`:""}
     </div>`;
   });
-  pagination.innerHTML="";
+  pag.innerHTML="";
   const pages=Math.ceil(filteredItems.length/ITEMS_PER_PAGE);
   for(let i=1;i<=pages;i++){
-    pagination.innerHTML+=`<button onclick="renderPage(${i})">${i}</button>`;
+    pag.innerHTML+=`<button onclick="renderPage(${i})">${i}</button>`;
   }
 }
 
 function addItem(){
+  const name=document.getElementById("name");
+  const price=document.getElementById("price");
+  const status=document.getElementById("status");
+  const seller=document.getElementById("seller");
+  const contact=document.getElementById("contact");
+  const place=document.getElementById("place");
+  const photo=document.getElementById("photo");
   const files=[...photo.files];
+
   if(name.value.trim()===""||price.value===""||status.value===""||
      seller.value.trim()===""||contact.value.trim()===""||files.length===0){
     alert("請填寫所有欄位");return;
   }
+
   if(files.length>3){alert("最多只能上傳 3 張圖片");return;}
+
   const imgs=[];let loaded=0;
   files.forEach(f=>{
     const r=new FileReader();
