--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@ nav button.active{font-weight:bold;text-decoration:underline}
     <input id="contact" placeholder="聯繫方式">
 
     <input id="photo" type="file" accept="image/*" multiple>
-
+    <!-- 圖片上傳 -->
+    <input id="photo" type="file" accept="image/*" multiple>
+    <small>
+      📌 圖片上傳限制：<br>
+      • 每張圖片需小於 <b>700KB</b><br>
+      • 超過限制將無法上架
+    </small>
+    
     <select id="place">
       <option>國壽仁愛大樓</option>
       <option>國壽信義安和大樓</option>
